[package]
name = "fuse3"
version = "0.7.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"
repository = "https://github.com/Sherlock-Holo/fuse3"
description = "FUSE user-space library async version implementation."
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "examples"]

[features]
tokio-runtime = ["dep:tokio"]
async-io-runtime = ["dep:async-fs", "dep:async-global-executor", "dep:async-lock", "dep:async-io", "dep:async-process"]
file-lock = []
unprivileged = ["nix/socket", "dep:which"]

[dependencies]
async-fs = { version = "2.1.1", optional = true }
async-global-executor = { version = "2.4.1", optional = true }
async-lock = { version = "3.3.0", optional = true }
async-notify = "0.3"
async-io = { version = "2.3.1", optional = true }
async-process = { version = "2.1.0", optional = true }
bincode = "1.3.3"
bytes = "1.5"
cstr = "0.2"
futures-channel = { version = "0.3.30", features = ["sink"] }
futures-util = { version = "0.3.30", features = ["sink"] }
libc = "0.2.153"
nix = { version = "0.27", default-features = false, features = ["fs", "mount"] }
serde = { version = "1.0.196", features = ["derive"] }
slab = "0.4.9"
tracing = "0.1.40"
trait-make = "0.1"
which = { version = "6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", default-features = false, features = ["user"] }

[dependencies.tokio]
version = "1.36"
features = ["fs", "rt", "sync", "net", "macros", "process"]
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["file-lock", "unprivileged", "tokio-runtime"]
targets = [
  "i686-unknown-freebsd",
  "i686-unknown-linux-gnu",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-linux-gnu",
]
