[package]
name = "examples"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld"
path = "src/helloworld/main.rs"

[[bin]]
name = "memfs"
path = "src/memfs/main.rs"

[[bin]]
name = "poll"
path = "src/poll/main.rs"

[[bin]]
name = "path_memfs"
path = "src/path_memfs/main.rs"

[dependencies]
fuse3 = { path = "../", features = ["tokio-runtime", "unprivileged"] }
async-trait = "0.1"
libc = "0.2"
tokio = { version = "1.2", features = ["macros", "rt", "time"] }
futures-util = "0.3"
mio = { version = "0.7", features = ["os-poll", "os-util"] }
tempfile = "3.2"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
