[package]
name = "examples"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld"
path = "src/helloworld/main.rs"

[[bin]]
name = "memfs"
path = "src/memfs/main.rs"

[[bin]]
name = "poll"
path = "src/poll/main.rs"

[[bin]]
name = "path_memfs"
path = "src/path_memfs/main.rs"

[dependencies]
fuse3 = { path = "../", features = ["tokio-runtime", "unprivileged"] }
libc = "0.2.147"
tokio = { version = "1", features = ["macros", "rt", "time"] }
futures-util = "0.3"
mio = { version = "0.8", features = ["os-poll"] }
tempfile = "3"
bytes = "1"
tracing = "0.1.21"
tracing-subscriber = "0.3"
