[package]
name = "examples"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld"
path = "src/helloworld/main.rs"

[[bin]]
name = "memfs"
path = "src/memfs/main.rs"

[[bin]]
name = "poll"
path = "src/poll/main.rs"

[[bin]]
name = "path_memfs"
path = "src/path_memfs/main.rs"

[dependencies]
fuse3 = { path = "../", features = ["tokio-runtime", "unprivileged"] }
libc = "0.2.153"
tokio = { version = "1.36", features = ["macros", "rt", "time", "signal"] }
futures-util = "0.3.30"
mio = { version = "0.8.10", features = ["os-poll"] }
tempfile = "3"
bytes = "1.5"
tracing = "0.1.40"
tracing-subscriber = "0.3"
